@startuml ERD
!theme plain
skinparam linetype ortho

entity "audits" as audits {
  id : bigint <<PK>>
  user_id : bigint?
  action : varchar
  subject_type : varchar
  subject_id : bigint
  diff_json : json?
  meta : json?
  ip : varchar?
  ua : varchar?
  created_at : timestamp?
  updated_at : timestamp?
}

entity "cache" as cache {
  key : varchar <<PK>>
  value : mediumtext
  expiration : int
}

entity "cache_locks" as cache_locks {
  key : varchar <<PK>>
  owner : varchar
  expiration : int
}

entity "entries" as entries {
  id : bigint <<PK>>
  post_type_id : bigint
  title : varchar
  slug : varchar
  status : enum
  published_at : timestamp?
  author_id : bigint?
  data_json : json
  seo_json : json?
  template_override : varchar?
  version : int
  created_at : timestamp?
  updated_at : timestamp?
  deleted_at : timestamp?
  is_active : tinyint?
}

entity "entry_media" as entry_media {
  entry_id : bigint <<PK>>
  media_id : char <<PK>>
  field_key : varchar <<PK>>
  order : int
}

entity "entry_slugs" as entry_slugs {
  entry_id : bigint <<PK>>
  slug : varchar <<PK>>
  is_current : tinyint
  created_at : timestamp
}

entity "entry_term" as entry_term {
  entry_id : bigint <<PK>>
  term_id : bigint <<PK>>
  created_at : timestamp?
  updated_at : timestamp?
}

entity "failed_jobs" as failed_jobs {
  id : bigint <<PK>>
  uuid : varchar
  connection : text
  queue : text
  payload : longtext
  exception : longtext
  failed_at : timestamp
}

entity "job_batches" as job_batches {
  id : varchar <<PK>>
  name : varchar
  total_jobs : int
  pending_jobs : int
  failed_jobs : int
  failed_job_ids : longtext
  options : mediumtext?
  cancelled_at : int?
  created_at : int
  finished_at : int?
}

entity "jobs" as jobs {
  id : bigint <<PK>>
  queue : varchar
  payload : longtext
  attempts : tinyint
  reserved_at : int?
  available_at : int
  created_at : int
}

entity "media" as media {
  id : char <<PK>>
  disk : varchar
  path : varchar
  original_name : varchar
  ext : varchar?
  mime : varchar
  size_bytes : bigint
  width : int?
  height : int?
  duration_ms : int?
  checksum_sha256 : varchar?
  exif_json : json?
  title : varchar?
  alt : varchar?
  collection : varchar?
  created_at : timestamp?
  updated_at : timestamp?
  deleted_at : timestamp?
}

entity "media_variants" as media_variants {
  id : char <<PK>>
  media_id : char
  variant : varchar
  path : varchar
  width : int?
  height : int?
  size_bytes : bigint
  created_at : timestamp?
  updated_at : timestamp?
}

entity "options" as options {
  id : char <<PK>>
  namespace : varchar
  key : varchar
  value_json : json
  description : varchar?
  created_at : timestamp?
  updated_at : timestamp?
  deleted_at : timestamp?
}

entity "outbox" as outbox {
  id : bigint <<PK>>
  topic : varchar
  payload_json : json
  status : enum
  attempts : int
  available_at : timestamp?
  created_at : timestamp?
  updated_at : timestamp?
}

entity "plugins" as plugins {
  id : char <<PK>>
  slug : varchar
  name : varchar
  version : varchar
  provider_fqcn : varchar
  path : varchar
  enabled : tinyint
  meta_json : json?
  last_synced_at : timestamp?
  created_at : timestamp?
  updated_at : timestamp?
}

entity "post_types" as post_types {
  id : bigint <<PK>>
  slug : varchar
  name : varchar
  options_json : json?
  created_at : timestamp?
  updated_at : timestamp?
}

entity "redirects" as redirects {
  id : bigint <<PK>>
  from_path : varchar
  to_path : varchar
  code : smallint
  hit_count : bigint
  created_at : timestamp?
  updated_at : timestamp?
}

entity "refresh_tokens" as refresh_tokens {
  id : bigint <<PK>>
  user_id : bigint
  jti : char
  expires_at : datetime
  used_at : datetime?
  revoked_at : datetime?
  parent_jti : char?
  created_at : timestamp?
  updated_at : timestamp?
}

entity "reserved_routes" as reserved_routes {
  id : bigint <<PK>>
  path : varchar
  kind : enum
  source : varchar
  created_at : timestamp?
  updated_at : timestamp?
  path_norm : varchar?
}

entity "sessions" as sessions {
  id : varchar <<PK>>
  user_id : bigint?
  ip_address : varchar?
  user_agent : text?
  payload : longtext
  last_activity : int
}

entity "taxonomies" as taxonomies {
  id : bigint <<PK>>
  slug : varchar
  name : varchar
  hierarchical : tinyint
  options_json : json?
  created_at : timestamp?
  updated_at : timestamp?
}

entity "term_tree" as term_tree {
  ancestor_id : bigint <<PK>>
  descendant_id : bigint <<PK>>
  depth : int
}

entity "terms" as terms {
  id : bigint <<PK>>
  taxonomy_id : bigint
  slug : varchar
  name : varchar
  meta_json : json?
  created_at : timestamp?
  updated_at : timestamp?
  deleted_at : timestamp?
  is_active : tinyint?
}

entity "users" as users {
  id : bigint <<PK>>
  name : varchar?
  email : varchar
  email_verified_at : timestamp?
  password : varchar
  is_admin : tinyint
  admin_permissions : json?
  remember_token : varchar?
  created_at : timestamp?
  updated_at : timestamp?
}

audits }o--|| users
entries }o--|| users
entries }o--|| post_types
entry_media }o--|| entries
entry_media }o--|| media
entry_slugs }o--|| entries
entry_term }o--|| entries
entry_term }o--|| terms
media_variants }o--|| media
refresh_tokens }o--|| users
term_tree }o--|| terms
term_tree }o--|| terms
terms }o--|| taxonomies
@enduml
